fix(prod) video proportions on firefox

--- a/style/style.css
+++ b/style/style.css
@@ -102,7 +102,7 @@ body::-webkit-scrollbar {
 .page iframe {
     margin: 1rem auto 0.5rem auto;
     height: 33vw;
-    width: auto;
+    width: 100%;
     aspect-ratio: 16 / 9;
 }
 
